; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_phys.c_pmap_zero_part_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_phys.c_pmap_zero_part_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vm_page_fictitious_addr = common dso_local global i64 0, align 8
@vm_page_guard_addr = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmap_zero_part_page(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @vm_page_fictitious_addr, align 8
  %9 = icmp ne i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @vm_page_guard_addr, align 8
  %14 = icmp ne i64 %12, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add nsw i64 %17, %18
  %20 = load i64, i64* @PAGE_SIZE, align 8
  %21 = icmp sle i64 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i64, i64* %4, align 8
  %25 = call i64 @i386_ptob(i64 %24)
  %26 = load i64, i64* %5, align 8
  %27 = add nsw i64 %25, %26
  %28 = trunc i64 %27 to i32
  %29 = load i64, i64* %6, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @bzero_phys(i32 %28, i32 %30)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @bzero_phys(i32, i32) #1

declare dso_local i64 @i386_ptob(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
